# sim-wheel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  WHEEEEEL.c  blink.pio.h  bs2_default.elf.map  build.ninja  cmake_install.cmake  compile_commands.json
Pico_Wheel/Test Codes/: Buttons.py  firefly.py  neo.py
Pico_Wheel/Test Codes/Neo/: CMakeLists.txt  Neo.c  neopixel.pio  ws2812.pio
Pico_Wheel/WHEEEEEL/: CMakeLists.txt  WHEEEEEL.c
Proj/stuff from main/: CMakeCache.txt  CMakeLists.txt  WHEEEEEL.c  bs2_default.elf.map  build.ninja  cmake_install.cmake  compile_commands.json
ac_sharedmemory/: pyaccsharedmemory.py  spi.py  telemetry.py  test.py  uart.py
ac_telemetry_client/: main.py  parsers.py  telemetry.py
docs/: OneNote.md
freertos/: .cproject  .mxproject  .project  stm-freertos Debug.cfg  stm-freertos Debug.launch  stm-freertos.ioc
freertos/Composite/: AL94.I-CUBE-USBD-COMPOSITE_conf.h
freertos/Debug/: makefile  objects.list  sources.mk  stm-freertos.elf  stm-freertos.list  stm-freertos.map
gui/: genfiles.txt  main.py  test.py  wheelbase.py  wheelbase.ui
pico/spi/: CMakeLists.txt  old.old  oldspi.cpp  script_to_build.txt  spi.cpp  spiuart.cpp
stm-pedal/: .cproject  .mxproject  .project  stm-pedal.ioc  stm-pedal.launch
stm-pedal/Debug/: makefile  stm-pedal.elf  stm-pedal.list  stm-pedal.map
stm-wheel/: .cproject  .mxproject  .project  stm-wheel Debug.launch  stm-wheel.ioc
stm-wheelbase/: .cproject  .project  sim_racing_wheel Debug.launch  sim_racing_wheel.ioc  stm-wheelbase Debug.launch  stm-wheelbase.ioc
(+128 files in other folders)
